<resources>
    <string name="app_name">Lollipop</string>
    <string name="sample_mail">sample@mail.com</string>
    <string name="sample_password">password</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
    <string name="reset_text">Forgot password?</string>
    <string name="user_name">Name</string>
    <string name="user_surname">Surname</string>
    <string name="user_age">Age</string>
    <string name="homeTitle">Welcome Back</string>
    <string name="searchTitle">Search a Book</string>
    <string name="my_libraryTitle">My Library</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="my_library">My Library</string>
    <string name="surname_error">Surname is required!</string>
    <string name="name_error">Name is required!</string>
    <string name="age_required">Age is required!</string>
    <string name="mail_error">Provide a valid email</string>
    <string name="void_password">Password is required!</string>
    <string name="error_password">At least 8 characters, one capital, one special, one number, no spaces</string>
    <string name="registration_complete">Registration successful!</string>
    <string name="registration_error">Error, try again!</string>
    <string name="error_login">Login denied, try again!</string>
    <string name="login_complete">Login successful!</string>
    <string name="remember_me">Remember me</string>
    <string name="reset_password">Reset password</string>
    <string name="email_reset_sent">Email sent!</string>
    <string name="grid_title_sample">A book</string>
    <string name="fragment_home_title">Books catalog</string>
    <string name="author_spacer">by</string>
    <string name="book_categories">"Categories: "</string>
    <string name="book_authors">"Authors: "</string>
    <string name="book_year">"Print date: "</string>
    <string name="book_description">Description:</string>
    <string name="sample_book_data">Sample</string>
    <string name="listen_button">Start listening!</string>
    <string name="a_book">Book selected:</string>
    <string name="no_internet">No internet connection!</string>
    <string name="account">Account</string>
    <string name="about">About</string>
    <string name="account_name">Your name</string>
    <string name="account_surname">Your surname</string>
    <string name="link_title">Our link</string>
    <string name="github"><a href="https://github.com/AK-JasonTodd/Lollipop" />GitHub</string>
    <string name="search_book">EX: Harry Potter...</string>
    <string name="label_likedBooks">Liked books</string>
    <string name="label_readBooks">Read books</string>
    <string name="update_favorites">Book added to favorites!</string>
    <string name="no_liked_books">There\'re no liked books</string>
    <string name="no_read_books">There\'re no read books</string>
    <string name="search_hint">search a book here</string>
    <string name="sherlock_lens">sherlock lens</string>
    <string name="noBooks">No books match the research</string>
    <string name="time">00:00</string>
    <string name="settings">Settings</string>
</resources>