<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentBook"
    android:clickable="true"
    android:id="@+id/layout_book">


    <TextView
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/grid_title_sample"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end"
        android:maxLines="1"/>

    <ImageView
        android:id="@+id/cover"
        android:layout_width="125dp"
        android:layout_height="175dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_title"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/sample_book_data" />

    <TextView
        android:id="@+id/genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_categories"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cover"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/genre_from_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/sample_book_data"
        app:layout_constraintBaseline_toBaselineOf="@+id/genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/genre"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_year"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genre"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/year_from_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/sample_book_data"
        app:layout_constraintBaseline_toBaselineOf="@+id/year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/year"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_authors"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/year"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>


    <TextView
        android:id="@+id/authors_from_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/sample_book_data"
        app:layout_constraintBaseline_toBaselineOf="@+id/authors"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/authors"
        android:textColor="@color/black"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/book_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authors"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="363dp"
        android:layout_height="152dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description">

        <TextView
            android:id="@+id/description_from_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_book_data"
            android:textColor="@color/black"
            android:textSize="14sp" />
    </ScrollView>

    <Button
        android:id="@+id/button_start_listening"
        android:layout_width="192dp"
        android:layout_height="59dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/listen_button"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"
        app:layout_constraintVertical_bias="0.516" />

    <ImageView
        android:id="@+id/favorite"
        android:layout_width="40dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:src="@drawable/im_not_favorite"
        app:layout_constraintBottom_toBottomOf="@+id/button_start_listening"
        app:layout_constraintEnd_toStartOf="@+id/button_start_listening"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_start_listening" />


</androidx.constraintlayout.widget.ConstraintLayout>