<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FragmentMyLibrary"
    android:background="#f2f2f2">

    <TextView
        android:id="@+id/label_liked_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/label_likedBooks"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_liked"
        android:layout_width="361dp"
        android:layout_height="147dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_liked_books"
        app:layout_constraintVertical_bias="0.0"/>


    <TextView
        android:id="@+id/label_readBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="264dp"
        android:text="@string/label_readBooks"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_read"
        android:layout_width="361dp"
        android:layout_height="170dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_readBooks"
        app:layout_constraintVertical_bias="0.0">

    </androidx.recyclerview.widget.RecyclerView>

    <ProgressBar
        android:id="@+id/progressBarLiked"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_liked"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_liked"
        app:layout_constraintStart_toStartOf="@+id/recycler_view_liked"
        app:layout_constraintTop_toTopOf="@+id/recycler_view_liked"
        android:visibility="visible"/>

    <ProgressBar
        android:id="@+id/progressBarRead"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_read"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_read"
        app:layout_constraintStart_toStartOf="@+id/recycler_view_read"
        app:layout_constraintTop_toTopOf="@+id/recycler_view_read"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/noLikedBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_liked_books"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_liked"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_liked"
        app:layout_constraintStart_toStartOf="@+id/recycler_view_liked"
        app:layout_constraintTop_toTopOf="@+id/recycler_view_liked" />

    <TextView
        android:id="@+id/noReadBooks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_read_books"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_view_read"
        app:layout_constraintEnd_toEndOf="@+id/recycler_view_read"
        app:layout_constraintStart_toStartOf="@+id/recycler_view_read"
        app:layout_constraintTop_toTopOf="@+id/recycler_view_read" />

</androidx.constraintlayout.widget.ConstraintLayout>