<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.FragmentSearch">

    <ProgressBar
        android:id="@+id/progress_bar_search"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchImage"
        style="?android:attr/progressBarStyle"
        android:layout_width="169dp"
        android:layout_height="225dp"
        android:src="@drawable/clipart1271036"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <GridView
        android:id="@+id/grid_book_search"
        android:layout_width="400dp"
        android:layout_height="536dp"
        android:layout_marginBottom="50dp"
        android:numColumns="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_search_title"
        app:layout_constraintVertical_bias="0.0">
    </GridView>

    <AutoCompleteTextView
        android:id="@+id/fragment_search_title"
        android:layout_width="294dp"
        android:layout_height="48dp"
        android:layout_marginTop="48dp"
        android:completionThreshold="1"
        android:dropDownAnchor="@id/fragment_search_title"
        android:fontFamily="sans-serif"
        android:hint="@string/search_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/Ivory4"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/image_button_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_button_search"
        android:layout_width="50dp"
        android:layout_height="41dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:contentDescription="@string/sherlock_lens"
        android:minHeight="48dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toTopOf="@+id/grid_book_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fragment_search_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/noBooksFound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noBooks"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>